--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="librerias"/>
+	<classpathentry kind="src" path="Biblioteca"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -9,21 +9,22 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="librerias/classmate-1.3.0.jar"/>
-	<classpathentry kind="lib" path="librerias/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="librerias/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/hibernate-core-5.2.11.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="librerias/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/jboss-logging-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="librerias/lucene-core-5.5.4.jar"/>
-	<classpathentry kind="lib" path="librerias/lucene-queryparser-5.5.4.jar"/>
-	<classpathentry kind="lib" path="librerias/sqlite-jdbc-3.23.1.jar"/>
-	<classpathentry kind="lib" path="librerias/xml-apis-1.3.03.jar"/>
-	<classpathentry kind="lib" path="librerias/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="librerias/sqltool.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/hibernate-core-5.2.11.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/hsqldb.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/lucene-core-5.5.4.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/lucene-queryparser-5.5.4.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/sqlite-jdbc-3.23.1.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/sqltool.jar"/>
+	<classpathentry kind="lib" path="Biblioteca/xml-apis-1.3.03.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
